--- a/a2/css/style.css
+++ b/a2/css/style.css
@@ -4,13 +4,14 @@ font-family: 'Press Start 2P', cursive;
 font-family: 'Cabin', sans-serif;
 */
 body {
-    background-image: url("../media/NERDG3RL_HomePageBG.png");
-    background-size: 100%;
+    font-family: 'Press Start 2P', cursive;
+/*    background-image: url("../media/NERDG3RL_HomePageBG.png");*/
+    background-color: black;
+    background-size: 80%;
 /*    background-repeat: no-repeat;*/
 }
 h1 {
-    font-family: 'Press Start 2P', cursive;
-    font-size: 40px;
+    font-size: 60px;
     text-align: center;
     color: lightyellow;
     margin-top: 30%;
@@ -19,32 +20,100 @@ h1 {
 h1:hover {
     color: lightpink;
 }
-ul {
-    font-family: 'Press Start 2P', cursive;
-    font-size: 15px;
-    list-style-type: none;
-    margin-left: 5%;
-    padding: 0;
-}
 
 
 li {
-    text-decoration: none;
-    border-bottom: 1px solid #555;
     display: inline;
 
 }
-a{
-    color: lightpink;
+
+/*a, a:hover */
+a, a:hover {
     text-decoration: none;
+}
+#navbar, #navbar:hover {
+    font-size: 15px;
+    font-family: 'Press Start 2P', cursive;
+    margin: 0px;
+    padding: 20px;
 
 
 }
+a {
+    color: lightpink;
+}
+
 li a:hover {
+    display: inline;
     background-color: lightyellow;
 }
+
+
 hr {
-    color: mintcream;
+    width: 100%;
+    color: pink;
     size: 20px;
 }
+
+#boxlinks {
+    width: 100%;
+    height: 350px;
+    background-color: mintcream;
+    padding-top: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
+
+}
+
+/*
+#box1 {
+    height: 300px;
+    width: 250px;
+    background-color: antiquewhite;
+    float: left;
+}
+*/
+
+.boxstyle {
+    height: 180px;
+    width: 20%;
+    background-color: antiquewhite;
+    float: right;
+    margin-left: 25px;
+    position: relative;
+}
+#box1 {
+    margin-left: 25px;
+    margin-right: 25px;
+}
+
+#box3, #box3:hover {
+    background-color:black;
+    margin-right:28%;
+    position: absolute;
+}
+
+#box4 {
+    background-color: mintcream;
+}
+
+.boxcontent {
+    font-family: cabin, arial;
+    font-size: 30px;
+    color: black;
+}
+
+a.boxcontent {
+    font-family: cabin, arial;
+    font-weight: 600;
+    color: black;
+}
+
+h2.boxcontent:hover {
+    background-color: palevioletred;
+}
+
+
+
+
 
