--- a/a2/css/style.css
+++ b/a2/css/style.css
@@ -4,7 +4,7 @@ font-family: 'Press Start 2P', cursive;
 font-family: 'Cabin', sans-serif;
 */
 body {
-    font-family: 'Press Start 2P', cursive;
+    font-family: 'Press Start 2P', arial;
 /*    background-image: url("../media/NERDG3RL_HomePageBG.png");*/
     background-color: black;
     background-size: 80%;
@@ -14,8 +14,8 @@ h1 {
     font-size: 3.8em;
     text-align: center;
     color: rgb(255, 242, 204);
-/*    border: 10px solid rgb(230, 184, 175);*/
-    border-radius: 12px;
+/*    border: 8px solid rgb(230, 184, 175);*/
+    border-radius: 10px;
     padding: 20px;
     margin: 150px 80px 100px 80px;
     position: static;
@@ -40,13 +40,18 @@ li {
     list-style-position: inside;
     display: inline;
     padding: 15px;
-/*    border: 1px solid lightyellow; */
 }
+
 li:hover {
- background-color: pink;
-
+    background-color: rgb(230, 184, 175);
+/*    color: dimgray;*/
 }
 
+#nav-login a:hover {
+    background-color: greenyellow;
+    color: dimgray;
+
+}
 a, a:hover {
     text-decoration: none;
 }
@@ -60,6 +65,10 @@ a, a:hover {
 /*FIX UP IN-LINE LOGIN BUTTON*/
 #nav-login {
     float:right;
+    position: static;
+}
+a:hover {
+    background-color:greenyellow;
 }
 
 /*FIX UP BACKGROUND A SELECTOR (MIGHT HAVE TO CREATE A SEPERATE LINK)*/
@@ -74,7 +83,7 @@ a {
 
 a:hover {
 /*    display: inline;*/
-    background-color: pink;
+    background-color: rgb(230, 184, 175);
 }
 
 
@@ -116,11 +125,15 @@ hr {
 #box1 {
     margin-right: 5px;
 }
+#box1, #box2 {
+    text-align: center;
+}
+
 #box1, #box2, #box3 {
     margin-top: 30px;
     margin-left: 5px;
-
 }
+
 #box1:hover, #box2:hover, #box3:hover {
     font-size: 1.0em;
     background-color: lightpink;
@@ -130,13 +143,19 @@ hr {
 #box3 {
 /*    margin-right:28%;*/
     position: absolute;
+    text-align: left;
 /*    background-color: black;*/
 }
 
 #box3:hover {
-
+    font-size: 1.1em;
 }
-
+#wise-words {
+    font-family: arial;
+    font-size: 0.7em;
+    text-align: center;
+    padding-left: 5px;
+}
 
 #box4 {
     background-color: black;
@@ -145,7 +164,6 @@ hr {
 
 .boxcontent {
     font-family:arial;
-    font-size: 30px;
     color: black;
 }
 
@@ -156,24 +174,30 @@ a.boxcontent {
 }
 
 h2 {
-    font-size: 1.8em;
+    font-size: 2.0em;
     font-weight: 700;
-    text-align: center;
-/*    padding-left: 15px;*/
+    padding: 3px;
 }
 
-h2.boxcontent:hover {
+/*h2.boxcontent:hover */
+h2:hover {
     color: rgb(255, 242, 204);
     font-style: italic;
 }
 
+#quote {
+    margin-left: 10px;
 
+}
 #quote:hover {
-    background-color: pink;
+    background-color: lightpink;
     color: rgb(255, 242, 204);
 }
 
-
+#quote, #quote:hover {
+    letter-spacing: 2px;
+    text-decoration: none;
+}
 
 
 
