--- a/a2/css/style.css
+++ b/a2/css/style.css
@@ -7,7 +7,7 @@
 }
 
 .logo {
-    position: absolute;
+    /*    position: absolute;*/
     top: 0px;
     width: 10%;
     height: auto;
@@ -29,11 +29,16 @@
     .logo .mobile {
         display: block;
         max-width: 263px;
+        padding: 3em 2em 1em 3em;
+        /*        padding-left: 100%*/
+        */
     }
     .logo .desktop {
         display: none;
     }
 }
+
+
 
 .nav_bar {
     display: inline-block;
@@ -41,17 +46,26 @@
     text-transform: uppercase;
     font-size: 0.825rem;
     position: absolute;
-    right: 1rem;
-
+    /*    right: 1rem;*/
 }
 
-.nav_bar a {
-        text-decoration: none;
-
+.navbar ul {
+    display: inline-block;
+    list-style-type: none;
 }
-.nav_bar li{
+
+.nav_bar li {
     list-style-type: none;
     float: left;
     padding-right: 10px;
+
+}
+
+
+.nav_bar a {
+    text-decoration: none;
+    padding-left: 0.8rem;
+    font-weight: 700;
+    color: #000000;
 
 }
