--- a/a2/css/style.css
+++ b/a2/css/style.css
@@ -83,7 +83,7 @@ h2 {
 
 #blurb h2 {
     position: relative;
-/*    margin-top: 10%;*/
+    /*    margin-top: 10%;*/
     color: #BBA085;
     font-stretch: semi-condensed;
     text-transform: uppercase;
@@ -95,7 +95,7 @@ h2 {
 #handcrafted h2 {
     position: relative;
     text-align: center;
-/*    padding: 15px;*/
+    /*    padding: 15px;*/
     font-size: 0.8rem;
     margin: inherit;
 }
@@ -106,6 +106,14 @@ h2 {
 }
 
 #mainimg {
+    object-position: center;
+    display: inline-block;
+    width: 100%;
+    border-radius: 2px;
+    opacity: 0.87;
+}
+
+.storeimages {
     object-position: center;
     display: inline-block;
     width: 100%;
