--- a/a2/css/style.css
+++ b/a2/css/style.css
@@ -1,3 +1,8 @@
+body {
+/*    background-color: #ebf4ec;*/
+    font-family: sans-serif;
+}
+
 #index_body {
     background-color: #BAA29E;
     background-image: url(3.png);
@@ -43,18 +48,22 @@
 
 .nav_bar {
     display: inline-block;
-    text-align: center;
     text-transform: uppercase;
     font-size: 0.825rem;
     position: absolute;
-    margin: inherit;
+    width: 100%;
+    /*    margin: inherit;*/
     /*    right: 1rem;*/
 }
 
 .navbar ul {
-    display: inline-block;
-    list-style-type: none;
+    text-align: center;
+    display: block;
+    width: 100%;
 }
+
+
+
 
 .nav_bar li {
     list-style-type: none;
@@ -63,7 +72,6 @@
     position: relative;
 
 }
-
 
 .nav_bar a {
     text-decoration: none;
@@ -113,10 +121,29 @@ h2 {
     opacity: 0.87;
 }
 
+ a {
+     text-decoration: underline;
+
+}
+
+a:visited {
+    color:inherit;
+}
+
+#productbox1 {
+    margin-top: 10%;
+    text-align: center;
+}
 .storeimages {
     object-position: center;
     display: inline-block;
-    width: 100%;
+    width: 85%;
     border-radius: 2px;
     opacity: 0.87;
+    margin-top: 10%;
 }
+
+.storeimages a {
+    text-decoration: un;
+}
+
