--- a/a3/css/style.css
+++ b/a3/css/style.css
@@ -1,10 +1,13 @@
 
 .prod_img {
-	width: 30%;
-	height: 30%;
+	width: 70%;
+	height: 70%;
+    display: inline-block;
 }
+
 body {
     font-family: arial;
+    background-color: #ebf4ec
 }
 
 #lookbook_body {
